--- a/src/app/home/register/register.component.html
+++ b/src/app/home/register/register.component.html
@@ -113,19 +113,7 @@
         </div>
       </div>
     </div>
-
-    <!-- <image-upload
-      [max]="2"
-      [url]="'https://info.diamond.school/wp-json/wp/v2/media'"
-      [headers]="{Authorization: 'MyToken'}"
-      [buttonCaption]="'Select Images!'"
-      [dropBoxMessage]="'Drop your images here!'"
-      [extensions]="['jpg','png','gif']"
-      (removed)="onRemoved($event)"
-      (uploadFinished)="onUploadFinished($event)"
-      (uploadStateChanged)="onUploadStateChanged($event)">
-    </image-upload> -->
-
+    <re-captcha (resolved)="resolved($event)" siteKey="6LfpRVQUAAAAAO3ITya8RpniAz21Xj651F3sOFCt"></re-captcha>
     <div class="form-group">
       <div class="form-check">
         <input name="check" #check="ngModel" class="form-check-input" type="checkbox"  [(ngModel)]="terms" value="" id="invalidCheck" required>
@@ -138,7 +126,7 @@
       </div>
     </div>
     <div class="form-group text-center">
-      <button class="btn btn-default" type="submit" [disabled]="!schoolForm.valid || !terms || school.password !== school.cpassword" >
+      <button class="btn btn-default" type="submit" [disabled]="!schoolForm.valid || !terms || school.password !== school.cpassword || !recaptChaSolved" >
         <i class="fa fa-floppy-o"></i>
         Submit
       </button>
