--- a/src/app/home/register/register.component.html
+++ b/src/app/home/register/register.component.html
@@ -24,7 +24,7 @@
             placeholder="subdomain" aria-describedby="inputGroupApend" required>
             <div class="input-group-append">
             <span class="input-group-text" id="inputGroupApend">
-             .diamond.school
+             .schoolapp.co.zw
             </span>
           </div>
         </div>
