--- a/src/app/home/register/register.component.html
+++ b/src/app/home/register/register.component.html
@@ -113,7 +113,8 @@
         </div>
       </div>
     </div>
-    <re-captcha (resolved)="resolved($event)" siteKey="6LfpRVQUAAAAAO3ITya8RpniAz21Xj651F3sOFCt"></re-captcha>
+    <!-- recapture owner joewptest@gmail.com -->
+    <re-captcha (resolved)="resolved($event)" siteKey="6LfbJYcUAAAAAMT5gIMLWjYDNxr2lRiNUYxz3M-E"></re-captcha>
     <div class="form-group">
       <div class="form-check">
         <input name="check" #check="ngModel" class="form-check-input" type="checkbox"  [(ngModel)]="terms" value="" id="invalidCheck" required>
