--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <nav class="navbar navbar-light  bg-light justify-content-center">
-  <p>&copy;2018 by MJ</p>
+  <p>&copy;2018 by <a href="diamond.co.zw" target="_blank">Diamond Developers</a></p>
 </nav>
