--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,5 +79,5 @@
 </p>
 
 <nav [class.fixed-bottom]="!elems.register && !elems.downloads" class="navbar navbar-light  bg-light justify-content-center">
-  <p>&copy;2018 by MJ</p>
+  <p>&copy;2019 by <a href="diamond.co.zw" target="_blank">Diamond Developers</a></p>
 </nav>
